<resources>
    <string name="app_name">Allen_Jikoshoukai</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_self_introduction">Self Introduction</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_background">Background</string>
    <string name="menu_education">Education</string>
    <string name="menu_hobbies">Hobbies</string>
    <string name="menu_interests">Interests</string>

    <string name="test123">test123</string>
</resources>
