<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_self_introduction"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_self_introduction" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_skills" />
        <item
            android:id="@+id/nav_background"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_background" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_education" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_hobbies"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_hobbies" />
            <item
                android:id="@+id/nav_interests"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_interests" />
        </menu>
    </item>

</menu>
