<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_launch">

    <fragment
        android:id="@+id/nav_launch"
        android:name="com.example.allen_jikoshoukai.ui.launch.LaunchFragment"
        android:label="launch"
        tools:layout="@layout/fragment_launch" >
        <action
            android:id="@+id/action_nav_launch_to_nav_self_introduction"
            app:destination="@id/nav_self_introduction" />
    </fragment>

    <fragment
        android:id="@+id/nav_self_introduction"
        android:name="com.example.allen_jikoshoukai.ui.selfintroduction.SelfIntroductionFragment"
        android:label="@string/menu_self_introduction"
        tools:layout="@layout/fragment_self_introduction" />

    <fragment
        android:id="@+id/nav_skills"
        android:name="com.example.allen_jikoshoukai.ui.gallery.GalleryFragment"
        android:label="@string/menu_skills"
        tools:layout="@layout/fragment_skills" />

    <fragment
        android:id="@+id/nav_background"
        android:name="com.example.allen_jikoshoukai.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_background"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_education"
        android:name="com.example.allen_jikoshoukai.ui.tools.ToolsFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_hobbies"
        android:name="com.example.allen_jikoshoukai.ui.share.ShareFragment"
        android:label="@string/menu_hobbies"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_interests"
        android:name="com.example.allen_jikoshoukai.ui.send.SendFragment"
        android:label="@string/menu_interests"
        tools:layout="@layout/fragment_send" />
</navigation>